--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
     background-color: white;
     border-radius: 10px;
     color: black;
+    max-width: 30%;
 
     #author{
       text-align: end;
@@ -12,22 +13,25 @@
 
     .buttons {
       display: flex;
-      justify-content: space-between;
-      min-height: 50px;
+      justify-content: space-evenly;
+      min-height: 50%;
       
       #tweet-quote {
+        color: #282c34;
         display: flex;
         padding: 10px;
         align-self: center;
         justify-content: center;
+        :hover {
+          background-color: black;
+        }
       }  
       #new-quote{
-        color: white;
         border-radius: 10px;
         padding: 10px;
         border: none;
-        cursor: pointer;
         font-size: 16px;
+        cursor: pointer;
       }
     }
   }
